--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GameZone - New Video Games</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">  <link rel="stylesheet" href="styles/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles/style.css"> <!-- Your existing stylesheet -->
 </head>
 <body>
+
 <div class="container">
-  <h1 class="text-center main-title"><i class="fa-solid fa-skull-crossbones"></i>PieRat - New Video Games</h1>
+  <h1 class="text-center main-title"><i class="fa-solid fa-skull-crossbones"></i> PieRat - New Video Games</h1>
 
   <form class="game-selection-form" method="post">
     <div class="user-input">
@@ -50,27 +51,6 @@
       <input type="checkbox" id="prod1Addon2"> <label for="prod1Addon2">Exclusive Skins</label>
     </div>
 
-    <!-- Product 2 -->
-    <div class="game-card">
-      <h5>Camp Survival II</h5>
-      <label class="form-label">Select Edition:</label>
-      <select class="form-select">
-        <option>Standard</option>
-        <option>Deluxe</option>
-        <option>Collector's Edition</option>
-      </select>
-      <br>
-      <label class="form-label">Platform:</label><br>
-      <input type="radio" name="platform2" value="PC" checked> PC
-      <input type="radio" name="platform2" value="PS5"> PS5
-      <input type="radio" name="platform2" value="Xbox"> Xbox
-      <br>
-      <br>
-      <label class="form-label">Add-ons:</label><br>
-      <input type="checkbox" id="Prod2addon1"> <label for="Prod2addon1">Season Pass</label>
-      <input type="checkbox" id="Prod2addon2"> <label for="Prod2addon2">Exclusive Skins</label>
-    </div>
-
     <div class="additional-comments">
       <label for="comments" class="form-label">Additional Comments</label>
       <textarea class="form-control" id="comments" rows="3"></textarea>
@@ -78,6 +58,28 @@
 
     <button type="submit" class="btn btn-primary submit-button">Submit</button>
   </form>
+</div>
+
+<!-- Sidebar Ads -->
+<div class="funny-ads-sidebar">
+  <div class="funny-ad">
+    <img src="download Ram.jpg" height="168" width="300"/>
+    <p><i class="fa-solid fa-fire fa-shake" style="color: red;"></i> DOWNLOAD MORE RAM! <i class="fa-solid fa-fire fa-shake"style="color: red;"></i></p>
+    <button onclick="alert('Oops! You got scammed!')">Download Now</button>
+  </div>
+
+  <div class="funny-ad">
+    <img src="free games.png" height="512" width="512"/>
+    <p><i class="fa-solid fa-gamepad fa-bounce" style="color: purple" ></i> FREE GAMES HERE! <i class="fa-solid fa-gamepad fa-bounce" style="color: purple"></i></p>
+    <button onclick="alert('404 - No Free Games For You!')">Get Games</button>
+  </div>
+</div>
+
+<!-- Bottom Ads -->
+<div class="funny-ads-bottom">
+  <div class="fake-ad"><i class="fa-solid fa-gift fa-beat" style="color: black"></i> WIN A FREE PS6 <i class="fa-solid fa-gift fa-beat" style="color: black;"></i></div>
+  <div class="fake-ad"><i class="fa-solid fa-laptop fa-shake" style="color: black;"></i> Download MORE RAM <i class="fa-solid fa-laptop fa-shake" style="color: #000000;"></i></div>
+  <div class="fake-ad"><i class="fa-solid fa-piggy-bank fa-bounce" style="color: black;"></i> Make $9999 a Day! Click NOW <i class="fa-solid fa-piggy-bank fa-bounce" style="color: #000000;"></i></div>
 </div>
 
 <script src="https://kit.fontawesome.com/00ca6f1740.js" crossorigin="anonymous"></script>
