--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GameZone - New Video Games</title>
+  <title>PieRat - New Video Games</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css"> <!-- Your existing stylesheet -->
 </head>
@@ -15,48 +15,67 @@
   <form class="game-selection-form" method="post">
     <div class="user-input">
       <label for="name" class="form-label">Full Name</label>
-      <input type="text" class="form-control" id="name" required placeholder="John Doe">
+      <input type="text" class="form-control" id="name" required placeholder="John Doe" value="">
     </div>
 
     <div class="user-input">
       <label for="email" class="form-label">Email</label>
-      <input type="email" class="form-control" id="email" required>
+      <input type="email" class="form-control" id="email" required value="">
     </div>
 
     <div class="user-input">
       <label for="password" class="form-label">Create Password</label>
-      <input type="password" class="form-control" id="password" required>
+      <input type="password" class="form-control" id="password" required value="">
     </div>
 
     <h3 class="game-selection-title">Select Your Games</h3>
-
-    <!-- Product 1 -->
-    <div class="game-card">
-      <h5>Baddies Brawler</h5>
-      <label class="form-label">Select Edition:</label>
-      <select class="form-select">
-        <option>Standard</option>
-        <option>Deluxe</option>
-        <option>Collector's Edition</option>
-      </select>
-      <br>
-      <label class="form-label">Platform:</label><br>
-      <input type="radio" name="platform1" value="PC" checked> PC
-      <input type="radio" name="platform1" value="PS5"> PS5
-      <input type="radio" name="platform1" value="Xbox"> Xbox
-      <br>
-      <br>
-      <label class="form-label">Add-ons:</label><br>
-      <input type="checkbox" id="prod1Addon1"> <label for="prod1Addon1">Season Pass</label>
-      <input type="checkbox" id="prod1Addon2"> <label for="prod1Addon2">Exclusive Skins</label>
+    <div class="wrapper">
+      <!-- Product 1 -->
+      <div class="game-card">
+        <h5>Baddies Brawler</h5>
+        <label class="form-label">Select Edition:</label>
+        <select class="form-select">
+          <option value="Standard">Standard</option>
+          <option value="Deluxe">Deluxe</option>
+          <option value="Collector's Edition">Collector's Edition</option>
+        </select>
+        <br>
+        <label class="form-label">Platform:</label><br>
+        <input type="radio" name="platform1" value="PC" checked> PC
+        <input type="radio" name="platform1" value="PS5"> PS5
+        <input type="radio" name="platform1" value="Xbox"> Xbox
+        <br>
+        <br>
+        <label class="form-label">Add-ons:</label><br>
+        <input type="checkbox" id="prod1Addon1" value="Season Pass"> <label for="prod1Addon1">Season Pass</label>
+        <input type="checkbox" id="prod1Addon2" value="Exclusive Skins"> <label for="prod1Addon2">Exclusive Skins</label>
+      </div>
+      <!-- Product 2 -->
+      <div class="game-card">
+        <h5>Mystical Meadows</h5>
+        <label class="form-label">Select Edition:</label>
+        <select class="form-select">
+          <option>Standard</option>
+          <option>Deluxe</option>
+          <option>Collector's Edition</option>
+        </select>
+        <br>
+        <label class="form-label">Platform:</label><br>
+        <input type="radio" name="platform1" value="PC" checked> PC
+        <input type="radio" name="platform1" value="PS5"> PS5
+        <input type="radio" name="platform1" value="Xbox"> Xbox
+        <br>
+        <br>
+        <label class="form-label">Add-ons:</label><br>
+        <input type="checkbox" id="prod2Addon1" value="seasonPass"> <label for="prod2Addon1">Season Pass</label>
+        <input type="checkbox" id="prod2Addon2" value="Exclusive Skins"> <label for="prod2Addon2">Exclusive Skins</label>
+      </div>
+      <div class="additional-comments">
+        <label for="comments" class="form-label">Additional Comments</label>
+        <textarea class="form-control" id="comments" rows="3"></textarea>
+      </div>
     </div>
-
-    <div class="additional-comments">
-      <label for="comments" class="form-label">Additional Comments</label>
-      <textarea class="form-control" id="comments" rows="3"></textarea>
-    </div>
-
-    <button type="submit" class="btn btn-primary submit-button">Submit</button>
+    <button type="submit" class="btn btn-primary submit-button" value="submit">Submit</button>
   </form>
 </div>
 
